Remove obsolete upgrade code (#419)